examples/smlfmt-1.2.0/test/fail/bad-strdec-3.sml
structure Hello :>
sig
  val hello: string -> unit
end =
struct
struct
  fun hello x = print (x ^ "\n")
end
